--- a/src/Components/Cards/Card.css
+++ b/src/Components/Cards/Card.css
@@ -47,3 +47,20 @@
   height: 14px;
   width: 14;
 }
+
+.card_top_more {
+  position: relative;
+  cursor: pointer;
+}
+
+.card-dropdown {
+  background-color: #fff;
+  width: 130px;
+  padding: 10px;
+  border-radius: 3px;
+  box-shadow: 1px 0 20px rgba(0, 0, 0, 0.05);
+}
+
+.card-dropdown p {
+  cursor: pointer;
+}
